--- a/index.haml
+++ b/index.haml
@@ -1,6 +1,13 @@
 !!!5
 %html
   %head
+    %title="Built - Software Consultancy and Design"
+    %meta{:name => "viewport", :content => "width=device-width; initial-scale=1.0; maximum-scale=1.0;"}
+    %meta{:content => "Software Consultancy and Design team based out of Dublin, Ireland", :name => "description"}
+    %meta{:content => "dublin, tech, sofware consultancy, web design, app design, design, ireland, contractor, web development, mobile apps", :name => "keywords"}
+
+    %meta{:name => "og:title", :content => "A Pub Crawl by Boat"}
+
     %link{ :rel => "stylesheet", :href => "//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" }
     %link{ :rel => "stylesheet", :href => "//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" }
     %link{ :rel => "stylesheet", :href => "/assets/css/main.css" }
