finished holding page

--- a/index.haml
+++ b/index.haml
@@ -10,8 +10,8 @@
 
     %link{ :rel => "stylesheet", :href => "//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" }
     %link{ :rel => "stylesheet", :href => "//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" }
-    %link{ :rel => "stylesheet", :href => "/assets/css/main.css" }
-    %link{ :rel => "stylesheet", :href => "/bower_components/remodal/dist/jquery.remodal.css" }
+    %link{ :rel => "stylesheet", :href => "assets/css/main.css" }
+    %link{ :rel => "stylesheet", :href => "bower_components/remodal/dist/jquery.remodal.css" }
   %body
     .remodal-bg
       .remodal{ :data => {:remodal_id => "modal"}}
@@ -38,9 +38,10 @@
           %button.btn-accent.btn-hollow.btn-big Contact Talent 150
       %section
         .container
-          %h1          
-          %p Talent 150 helps you design and implement a product strategy across online platforms. We bring our experience building companies, operating within confined budgets and building for growth to our client projects. This site is under construction, but we're open for business. If you're interested in getting a site built, or checking out our porfolio - get in contact <a href="#">here.</a>
-          %img{:src => "http://hire.ly/assets/img/black_background.jpg"}
+          %h1 A new conference for 150 leaders from Ireland's Recruitment and HR industry.         
+          %p Talent150's mission is to bring an entertaining, creative event to the HR and Recruitment industry in Ireland. We'll bring together established international names in HR, alongside innovative startups, academics and professionals. Each event will be framed around one of the problems facing HR professionals in Ireland today. 
+          %p Above all, we'll always be different, and always fun.    
+          %img.m-bottom-image{:src => "assets/images/chq-circle.png"}
       %footer
         %p &copy; talent150 2014
 
